--- a/Style.css
+++ b/Style.css
@@ -1,267 +1,400 @@
 * {
-  box-sizing: border-box;
+   box-sizing: border-box;
 }
 
+
 html {
-  font-family: acme, 'Noto Sans KR', sans-serif;
+   font-family: acme, 'Noto Sans KR', sans-serif;
 }
 
 :root {
-  --LBrary-Primary-color: #6D6AFE;
-  --LBrary-Red: #FF5B56;
-  --LBrary-Black: #111322;
-  --LBrary-White: #ffffff;
-  --LBrary-SkyBlue: #6AE3FE;
-  --gra-prymary-to-skyblue: linear-gradient(91deg, var(--LBrary-Primary-color) 0.12%, var(--LBrary-SkyBlue) 101.84%);
-  --LBrary-Gray100: #3E3E43; 
-  --LBrary-Gray60: #9FA6B2;
-  --LBrary-Gray20: #CCD5e3;
-  --LBrary-Gray10: #E7EFFB;
-  --LBrary-GrayLight: #f5f5f5;
-  --Linkbrary-bg: #f0f6ff
+   --LBrary-Primary-color: #6D6AFE;
+   --LBrary-Red: #FF5B56;
+   --LBrary-Black: #111322;
+   --LBrary-White: #ffffff;
+   --LBrary-SkyBlue: #6AE3FE;
+   --gra-prymary-to-skyblue: linear-gradient(91deg, var(--LBrary-Primary-color) 0.12%, var(--LBrary-SkyBlue) 101.84%);
+   --LBrary-Gray100: #3E3E43; 
+   --LBrary-Gray60: #9FA6B2;
+   --LBrary-Gray20: #CCD5e3;
+   --LBrary-Gray10: #E7EFFB;
+   --LBrary-GrayLight: #f5f5f5;
+   --Linkbrary-bg: #f0f6ff
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
 }
 
 header { 
-  width: 100%;
-  display: flex;
-  justify-content: center;
+   width: 100%;
+   display: flex;
+   justify-content: center;
 }
 
 
 body {
-  background-color: var(--Linkbrary-bg);
-  margin: 0;
+   background-color: var(--Linkbrary-bg);
+   margin: 0;
 }
 
-nav {
-  display: flex;
-  position: sticky;
-  background-color: var(--Linkbrary-bg);
-  top: 0;
-  padding: 20px 200px;
-  align-items: center;
-  justify-content: space-between;
+header div.landingPage > img {
+   max-width: 1118px;
+}
+
+nav.landingPage {
+   background-color: var(--Linkbrary-bg);
+   position: sticky;
+   margin: 0;
+   top: 0;
+}
+
+nav.landingPage > div.landingPage {
+   display: flex;
+   padding: 20px 200px;
+   align-items: center;
+   justify-content: space-between;
 }
 
 .button {
-  display: flex;
-  color: var(--LBrary-GrayLight);
-  font-size: 18px;
-  font-weight: 600;
-  padding: 16px 20px;
-  border-radius: 8px;
-  background: var(--gra-prymary-to-skyblue);
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  line-height: 100%;
+   display: flex;
+   color: var(--LBrary-GrayLight);
+   font-size: 1.125rem;
+   font-weight: 600;
+   padding: 16px 20px;
+   border-radius: 8px;
+   background: var(--gra-prymary-to-skyblue);
+   justify-content: center;
+   align-items: center;
+   text-decoration: none;
+   line-height: 100%;
 }
 
 
 header .landingPage {
-  display: flex;
-  flex-direction: column;
-  background-color: var(--Linkbrary-bg);
-  width: 100%;
-  max-width: 1920px;
-  justify-content: flex-end;
-  align-items: center;  
-  padding: 70px 360px 0;
-  gap: 40px;
-  font-size: 64px;
-  text-align: center;
-  font-weight: 700;
-  line-height: 125%;
+   display: flex;
+   flex-direction: column;
+   background-color: var(--Linkbrary-bg);
+   width: 100%;
+   max-width: 1200px;
+   justify-content: flex-end;
+   align-items: center;
+   margin: 0 auto;  
+   padding: 70px 0 0;
+   gap: 40px;
+   font-size: 4rem;
+   text-align: center;
+   font-weight: 700;
+   line-height: 125%;
 }
 
 header.landingPage > img {
-  width: 100%;
+   width: 100%;   
 }
 
 .purplePinkGradation {
-  background: linear-gradient(91deg, #6D6AFE 17.28%, #FF9F9F 74.98%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+   background: linear-gradient(91deg, #6D6AFE 17.28%, #FF9F9F 74.98%);
+   background-clip: text;
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent;
 }
 
-nav > a.button {
-  width: 128px;
+nav.landingPage > div.landingPage > a.button {
+   width: 128px;
 }
 
 .landingPage > a.button {
-    width: 350px;
+      width: 350px;
 }
 
 article.landingPage {
-  background-color: var(--LBrary-White);
-  display: flex;
-  padding: 50px 461px;
-  width: 100%;
-  max-width: 1920px;
-  margin: 0 auto;
-  align-items: center;
-  gap: 157px;
+   background-color: var(--LBrary-White);
+   grid-template-columns: 1fr 1fr;
+   display: grid;
+   padding: 50px 0;
+   width: 100%;
+   max-width: 981px;
+   margin: 0 auto;
+   align-items: center;
+   column-gap: 157px;
+   row-gap: 10px;
+}
+
+article.landingPage > p {
+   margin: 0;
 }
 
 article.landingPage .textSpace {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+   display: flex;
+   flex-direction: column;
+   gap: 10px;
 }
 
 article.landingPage > img {
-  width: 100%;
-  max-width: 550px;
+   grid-row: 1 / 3;
+   width: 550px;
+   height: 450px;
 }
 
 article p.title {
-  font-size: 48px;
-  font-weight: 700;
-  letter-spacing: -0.3px;
-  margin: 0;
+   font-size: 3rem;
+   font-weight: 700;
+   letter-spacing: -0.3px;
+   grid-row: 1;
+   margin: auto;
+   margin-bottom: 0;
+   margin-left: 0;
 }
 
 article p.description {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 24px;
-  margin: 0px;
+   font-size: 1rem;
+   font-weight: 400;
+   line-height: 24px;
+   margin: auto;
+   margin-top: 0;
+   margin-left: 0;
 }
 
 footer {
-  display: flex;
-  justify-content: space-between;
-  background-color: var(--LBrary-Black);
-  width: 100%;
-  margin: 0;
-  padding: 32px 104px 64px;
+   display: flex;
+   justify-content: space-between;
+   background-color: var(--LBrary-Black);
+   width: 100%;
+   margin: 0;
+   padding: 32px 104px 64px;
 }
 
 .corperateInformation {
-  color: #676767;
-  text-align: center;
-  font-family: acme;
-  font-size: 16px;
-  font-weight: 400;
+   color: #676767;
+   text-align: left;
+   font-family: acme;
+   font-size: 1rem;
+   font-weight: 400;
 }
 
 .footerPravay{
-  display: flex;
-  gap: 30px;
-  color: #CFCFCF;
-  font-family: acme;
-  font-size: 16px;
-  font-weight: 400;
+   display: flex;
+   gap: 30px;
+   color: #CFCFCF;
+   font-family: acme;
+   font-size: 1rem;
+   font-weight: 400;
 }
 
 .footerSocial {
-  display: flex;
-  gap: 12px;
-  align-items: center;
+   display: flex;
+   gap: 12px;
+   align-items: center;
+   justify-content: end;
 }
 
 .SignPage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 238px auto auto;
-  width: 400px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   margin: 238px auto auto;
+   width: 400px;
 }
 
 .SignForm {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  gap: 30px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   width: 100%;
+   gap: 30px;
 }
 
 .SignForm > header {
-  flex-direction: column;
-  width: auto;
-  text-align: center;
-  color: var(--LBrary-Black);
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 150%;
+   flex-direction: column;
+   width: auto;
+   text-align: center;
+   color: var(--LBrary-Black);
+   font-size: 1rem;
+   font-weight: 400;
+   line-height: 150%;
 }
 
 .InputSection {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
+   display: flex;
+   flex-direction: column;
+   gap: 12px;
 }
 
 .SignInput  {
-  display: flex;
-  position: relative;
-  padding: 18px 15px;  
-  width: 100%;
-  gap: 6px;
-  border-radius: 8px;
-  border: 1px solid var(--LBrary-Gray20);
-  background: var(--LBrary-White);
-  border-radius: 8px;
-  justify-content: space-between;
+   display: flex;
+   padding: 18px 15px;
+   width: 100%;
+   gap: 6px;
+   border-radius: 8px;
+   border: 1px solid var(--LBrary-Gray20);
+   background: var(--LBrary-White);
+   position: relative;
 }
 
-input:focus-visible{
-  outline-color: var(--LBrary-SkyBlue);
+.inputDiv {
+   display: flex;
+   position: relative;
+   justify-content: space-between;
+   width: 100%;
 }
+
+.SignInput:focus{ 
+   outline-color: var(--LBrary-Primary-color);
+}
+
+.passwordSeenButton {
+   position: absolute;
+   top: 50%;
+   right: 15px;
+   transform: translate(0, -50%);
+}
+
 
 .signInputBeHidden {
-  position: absolute;
-  margin-right: 15px;
+   position: absolute;
+   margin-right: 15px;
 }
 
 .WrongPass {
-  color: var(--LBrary-Red);
-  font-size: 14px;
-  font-weight: 400;
+   color: var(--LBrary-Red);
+   font-size: 0.875rem;
+   font-weight: 400;
 }
 
 .SignLabel {
-  color: var(--LBrary-black);
-  font-size: 14px;
-  font-weight: 400;
+   color: var(--LBrary-black);
+   font-size: 0.875rem;
+   font-weight: 400;
 }
 
 .SocialSign {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border-radius: 8px;
-  border: 1px solid var(--LBrary-Gray20);
-  background-color: var(--LBrary-Gray10);
-  width: 100%;
-  margin: 32px;
-  padding: 12px 24px;
-  font-size: 14px;
-  color: var(--LBrary-Gray50);
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   border-radius: 8px;
+   border: 1px solid var(--LBrary-Gray20);
+   background-color: var(--LBrary-Gray10);
+   width: 100%;
+   margin: 32px;
+   padding: 12px 24px;
+   font-size: 0.875rem;
+   color: var(--LBrary-Gray50);
 }
 
 .icons {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 16px;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   gap: 16px;
 }
 
 .icon {
-  display: flex;
-  position: relative;
-  height: 42px;
-  width: 42px;  
+   display: flex;
+   position: relative;
+   height: 42px;
+   width: 42px;  
 }
 
 .SignForm > .button {
-  width: 100%;
-  margin: auto;
+   width: 100%;
+   margin: auto;
+}
+
+
+@media (max-width: 1199px) {
+   nav.landingPage > div.landingPage {
+      width: 100%;
+      padding: 20px 32px;
+      max-width: 864px;
+      margin: 0 auto;
+   }
+   
+   header .landingPage {
+      max-width: 698px;
+   }
+
+   article.landingPage {
+      max-width: 698px;
+      row-gap: 10px;
+      column-gap: 51px;
+   }
+
+   article.landingPage > img {
+      width: 385px;
+      height: 315px;
+   }
+
+   header div.landingPage > img {
+      max-width: 650px;
+   }
+}
+
+@media (max-width: 767px) {
+   header .landingPage {
+      font-size: 2rem;
+      padding: 28px 32px 0;
+   }
+
+   header .landingPage img {
+      width: 100%;
+   }
+
+   nav.landingPage > div.landingPage img {
+      width: 88.6px;
+   }
+
+   nav.landingPage > div.landingPage > a.button {
+      width: 80px;
+      font-size: 0.875rem;
+   }
+
+   .landingPage > a.button {
+      width: 200px;
+      font-size: 0.875rem;
+   }
+
+   article.landingPage{
+      display: grid;
+      grid-template-columns: 1fr;
+      padding: 40px;
+   }
+
+   article p.title {
+      font-size: 1.5rem;
+      margin-bottom: 20px;
+      grid-row: 1;
+   }
+
+   article p.description {
+      font-size: 0.9375rem;
+      margin-top: 16px;
+      grid-row: 3;
+   }
+
+   article.landingPage > img {
+      width: 100%;
+      height: auto;
+      grid-column: 1;
+      grid-row: 2;
+   }
+
+   footer {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      padding: 32px;      
+      row-gap: 60px;
+   }
+
+   footer .corperateInformation {
+      grid-row: 2;
+   }
+   
+   .SignPage {
+      width: 100%;
+      max-width: 464px;
+      margin: 120px auto auto;
+      padding: 0 32px;
+   }
 }
