--- a/Style.css
+++ b/Style.css
@@ -155,17 +155,18 @@ body {
    }
 
    article.landingPage {
-      background-color: var(--LBrary-White);
       grid-template-columns: 1fr 1fr;
       display: grid;
       padding: 50px 0;
       width: 100%;
       max-width: 981px;
       margin: 0 auto;
-      align-items: center;
-      column-gap: 157px;
+      column-gap: 147px;
       row-gap: 10px;
    }
+
+   /*모바일 변환시 이미지의 배열 순서 문제를 
+   태그 수준에서 최적화 하기 위해 grid로 구성*/
 
    article.landingPage > p {
       margin: 0;
@@ -188,6 +189,7 @@ body {
    }
 
    article p.description {
+      color: #6B6B6B;
       font-size: 1rem;
       font-weight: 400;
       line-height: 24px;
@@ -361,15 +363,29 @@ body {
          margin: 0 auto;
       }
       
+      
       header .landingPage {
          max-width: 698px;
       }
+      /*padding 32px, margin auto, max-width로
+      여백이 줄어듬에 따라 버튼과 로고가 가장자리에 가까워지고, 
+      32px시점에서 다시 좁혀지는 구조로 만듬
+      다만, 1920창 크기에서 화면 내 크기는 1903수준으로 살짝 작은 수준이지만
+      @media는 외곽 테두리를 기준으로 계산해 넘어가는 과정에서 약간의 오차 발생*/
+
+
+      header .landingPage > div {
+         width: 80%;
+      }
+      /*태블릿 사이즈에서 보기 편하게 헤드라인을 줄임*/
+
 
       article.landingPage {
          max-width: 698px;
          row-gap: 10px;
-         column-gap: 51px;
+         column-gap: 42px;
       }
+      /*원본은 51px이나, 줄넘김 현상이 발생하여 가독성을 높이기 위해 줄임*/
 
       article.landingPage > img {
          width: 385px;
@@ -389,7 +405,10 @@ body {
          padding: 28px 32px 0;
       }
 
-      header .landingPage img {
+      /*태블릿과 별개로 모바일은 가독성 고려의 중요도가 떨어지므로 
+      가로 길이 그대로 유지*/
+
+      header div.landingPage > img {
          width: 100%;
       }
 
@@ -400,6 +419,7 @@ body {
       nav.landingPage > div.landingPage > a.button {
          width: 80px;
          font-size: 0.875rem;
+         padding: 10px 16px;
       }
 
       .landingPage > a.button {
@@ -407,10 +427,14 @@ body {
          font-size: 0.875rem;
       }
 
+      .articleWhiteBackground {
+         padding-bottom: 40px;
+      }
+
       article.landingPage{
-         display: grid;
          grid-template-columns: 1fr;
          padding: 40px;
+         gap: 0;
       }
 
       article p.title {
